# mcp-bom

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  README.md  score_function.toml
.github/: PULL_REQUEST_TEMPLATE.md
corpus/: README.md  __init__.py  build_manifest.py  manifest.json
docs/: build-plan.md  capability-taxonomy.md  corpus-integrity-investigation.md  extended-hypotheses.md  neurips-strategy.md  preregistration-deviations.md  preregistration.md  prior-art-assessment.md  research-design.md  score-function.md  threats-to-validity.md
extractor/: README.md  pyproject.toml  run_corpus_scan.py
extractor/mcp_bom/: __init__.py  _strip.py  _tool_scope.py  cli.py  extractor.py  models.py  scorer.py
extractor/mcp_bom/patterns/: data_sensitivity.py  delegation.py  egress.py  filesystem.py  impersonation.py  ingress.py  secrets.py  shell.py
extractor/scripts/: reproduce.py
extractor/tests/: test_extractor.py  test_secrets_disambiguation.py
extractor/tests/fixtures/: dangerous_server.golden.json
extractor/tests/fixtures/comment_only_delegation/: server.py
extractor/tests/fixtures/dangerous_server/: server.py  tools.py
extractor/tests/fixtures/go_egress_server/: main.go
extractor/tests/fixtures/safe_server/: server.py
extractor/tests/fixtures/tier1_secrets_server/: server.py
extractor/tests/fixtures/tier2_secrets_server/: server.py
extractor/tests/fixtures/ts_shell_server/: index.ts
labeler/: .dockerignore  Dockerfile  app.py  extract_signals.py
spike/: analyze_spike.py  deep_analysis.py  extractor.py  (+8 more)
(+758 files in other folders)
