[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bom"
version = "0.1.0"
description = "MCP-BOM static capability extractor and attack-surface scorer"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mcp-bom = "mcp_bom.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
